@@ -5,7 +5,7 @@
 # Copyright (c) 2004-2007 by Michael Schlenker <mic42@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: asn.test,v 1.18 2007/09/18 21:03:18 mic42 Exp $
+# RCS: @(#) $Id: asn.test,v 1.19 2011/01/05 22:33:33 mic42 Exp $
 
 # -------------------------------------------------------------------------
 
@@ -374,11 +374,61 @@ foreach {n i len hex} {
     34 36028797018963968 08  0080000000000000
     35 -9223372036854775808 08 8000000000000000
     36 9223372036854775807 08 7FFFFFFFFFFFFFFF
+    37 65537            03 010001
+    38 -8323071         03 810001 
 } {
     test asn-12.$n {getInteger} {
     set data [binary format H2H2H* 02 $len $hex]
     asn::asnGetInteger data int
     set int
+    }  $i  ; # {}
+}
+
+foreach {n i len hex} {
+     0  0               01 00
+     1 -1               01 FF
+     2  1               01 01
+     3  127             01 7F
+     4  128             02 0080
+     5  129             02 0081
+     6  256             02 0100
+     7 -127             01 81
+     8 -128             01 80
+     9 -129             02 FF7F
+    10  32766           02 7FFE
+    11  32767           02 7FFF
+    12  32768           03 008000
+    13  32769           03 008001
+    14 -32767           02 8001
+    15 -32768           02 8000
+    16 -32769           03 FF7FFF
+    17  65536           03 010000
+    18  8388607         03 7FFFFF
+    19  8388608         04 00800000
+    20  8388609         04 00800001
+    21  16777216        04 01000000
+    22 -8388607         03 800001
+    23 -8388608         03 800000
+    24 -8388609         04 FF7FFFFF
+    25 -65536           03 FF0000
+    26 -2147483648      04 80000000 
+    27 2147483647       04 7FFFFFFF
+    28 -549755813888    05 8000000000
+    29 549755813887     05 7FFFFFFFFF
+    30 -140737488355328 06 800000000000
+    31 140737488355327  06 7FFFFFFFFFFF
+    32 -36028797018963968 07 80000000000000
+    33 36028797018963967 07  7FFFFFFFFFFFFF
+    34 36028797018963968 08  0080000000000000
+    35 -9223372036854775808 08 8000000000000000
+    36 9223372036854775807 08 7FFFFFFFFFFFFFFF
+    37 65537            03 010001
+    38 -8323071         03 810001 
+} {
+    test asn-12.[expr {$n+39}] {getBigInteger} {
+    set data [binary format H2H2H* 02 $len $hex]
+    asn::asnGetBigInteger data int
+    math::bignum::tostr $int
     }  $i  ; # {}
 }
 
